--- a/templates/about_the_site.html
+++ b/templates/about_the_site.html
@@ -1,1 +1,12 @@
-サイトについて表示
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>利用規約</title>
+  </head>
+  <body>
+    <h1>サイトについて</h1>
+    <h2></h2>
+  </body>
+</html>
