--- a/templates/terms_of_service.html
+++ b/templates/terms_of_service.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>利用規約</h1>
-    <h2>各サイトの利用規約にしたがって使用してください。</h2>
+    <h2>各サイトの指示にしたがって使用してください。</h2>
   </body>
 </html>
