--- a/templates/about_the_site.html
+++ b/templates/about_the_site.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>利用規約</title>
+    <title>MusicReefについて</title>
   </head>
   <body>
     <h1>サイトについて</h1>
