--- a/templates/terms_of_service.html
+++ b/templates/terms_of_service.html
@@ -1,42 +1,12 @@
 <!DOCTYPE html>
-
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MUSICREEF 利用規約</title>
-</head>
-<body>
-    
-    <header>
-        <h1>MUSICREEF | <a href="#利用規約">※利用規約</a></h1>
-    </header>
-
-    <h1 id="利用規約">利用規約</h1>
-    <p>以下はMUSICREEFの利用規約です。このサイトを利用する際には、以下の条件に同意したものとみなされます。</p>
-
-    ※以下はあくまでも、本サイトにての利用規約に過ぎません。詳しい詳細については各サイトの利用規約に準ずることとします。
-
-    <h2>1. 利用許諾条件</h2>
-    <p>本サイトの音源はフリーでダウンロードおよび使用できますが、利用者は著作権およびライセンス条件を遵守しなければなりません。</p>
-
-    <h2>2. 著作権とライセンス</h2>
-    <p>本サイトの音源の著作権は作者に帰属し、特定のライセンス条件に従って使用できます。ライセンスに違反しないようにご注意ください。</p>
-
-    <h2>3. 利用者の責任</h2>
-    <p>利用者は本サイトを正当な目的でのみ使用し、不正な目的での使用、著作権の侵害、および不正行為を禁じます。</p>
-
-    <h2>4. プライバシーポリシー</h2>
-    <p>利用者のプライバシーに関する情報はプライバシーポリシーに基づいて収集および管理されます。詳細についてはプライバシーポリシーをご覧ください。</p>
-
-    <h2>5. 料金と支払い</h2>
-    <p>本サイトの提供する音源のダウンロードには料金はかかりません。一部のコンテンツは無料で提供され、一部は有料です。</p>
- 
-   
-    
-    <footer>
-        <h3>MUSICREEF</h3> <p><a href="#ホーム">ホーム</a> | <a href="#ミュージックリーフについて">MUSICREEF（ミュージックリーフ）について</a></p>
-        
-    </footer>
-</body>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>利用規約</title>
+  </head>
+  <body>
+    <h1>利用規約</h1>
+    <h2>各サイトの指示にしたがって使用してください</h2>
+  </body>
 </html>
