利用規約にヘッダーとフッターの追加

--- a/templates/terms_of_service.html
+++ b/templates/terms_of_service.html
@@ -6,7 +6,13 @@
     <title>利用規約</title>
   </head>
   <body>
+    <header>
+      <h1>MUSICREEF | <a href="#利用規約">※利用規約</a></h1>
+  </header>
     <h1>利用規約</h1>
     <h2>各サイトの指示にしたがって使用してください</h2>
+    <footer>
+      <h3>MUSICREEF</h3> <p><a href="#ホーム">ホーム</a> | <a href="#ミュージックリーフについて">MUSICREEF（ミュージックリーフ）について</a></p>
+  </footer>
   </body>
 </html>
