index.htmlに修正を行いました

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,17 @@
     <title>MusicReef</title>
   </head>
   <body>
-    <a href="{{url_for('tag')}}">タグ登録</a>
+    <h2>音源管理</h2>
+    <a href="">音源検索</a>
+    <a href="">音源登録</a>
+    <h2>口コミ管理</h2>
+    <a href="">口コミ削除</a>
+    <h2>アカウント管理</h2>
+    <a href="">管理者一覧</a>
+    <a href="">アカウント編集</a>
+    
+    <h3>フリー音源の検索</h3>
+    <option value="genre1">A</option><input type="text" name="">
+    <button type="submit">検索</button>
   </body>
 </html>
