index.htmlにログアウトのリンクを追加しました

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h2>音源管理</h2>
+    <a href="{{url_for('logout')}}">ログアウト</a>
     <a href="">音源検索</a>
     <a href="">音源登録</a>
     <h2>口コミ管理</h2>
