利用規約の灰色の背景色をつけたした

--- a/templates/terms_of_service.html
+++ b/templates/terms_of_service.html
@@ -92,8 +92,17 @@
         >
       </li>
     </ul>
-    <h1>・利用規約</h1>
-    <h2>各サイトの指示にしたがって使用してください</h2>
+    <h1
+      style="
+        background-color: #ececec;
+        margin: 0;
+        padding-top: 10px;
+        padding-bottom: 10px;
+      "
+    >
+      　　利用規約
+    </h1>
+    <h2>　　各サイトの指示にしたがって使用してください</h2>
     <br /><br /><br /><br /><br /><br /><br /><br /><br />
     <div class="footer04">
       <h1>MUSIC REEF</h1>
