--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <h2>音源管理</h2>
     <a href="{{url_for('logout')}}">ログアウト</a>
     <a href="">音源検索</a>
-    <a href="">音源登録</a>
+    <a href="{{url_for('music_register')}}">音源登録</a>
     <h2>口コミ管理</h2>
     <a href="">口コミ削除</a>
     <h2>アカウント管理</h2>
