music_registerにタグの項目を追加しました

--- a/templates/music_register.html
+++ b/templates/music_register.html
@@ -40,6 +40,15 @@
             <option value="5">サイト名</option><br>
         </select><br>
         URL<input type="text" name="url"><br>
+        タグ
+        <b>雰囲気</b><br>
+        <input type="checkbox" name="tag_name" value="おだやか">おだやか<br>
+        <b>感情</b><br>
+        <input type="checkbox" name="tag_name" value="かなしい">かなしい<br>
+        <b>楽器</b><br>
+        <input type="checkbox" name="tag_name" value="ピアノ">ピアノ<br>
+        <b>用途</b><br>
+        <input type="checkbox" name="tag_name" value="YouTube">YouTube<br>
         <button type = "submit">登録</button>
     </form>
     <h4 style="margin-top:25px"><a href="{{url_for('mypage')}}">戻る</a></h4>
