行のインデント修復

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,9 @@
           ></span
         >
         <span class="blockitem" style="height: 45px"
-          ><a href="{{url_for('music_register')}}" style="color: rgb(60, 60, 60); font-size: 23px"
+          ><a
+            href="{{url_for('music_register')}}"
+            style="color: rgb(60, 60, 60); font-size: 23px"
             >音源登録</a
           ></span
         >
