--- a/templates/login.html
+++ b/templates/login.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      rel="stylesheet"
-      href="{{url_for('static',filename='css/haikei.css')}}"
-    />
-    <link
       rel="icon"
-      href="{{url_for('static', filename='favicon/favicon.ico')}}"
+      href="{{url_for('static', filename='favicon/mrロゴ.ico')}}"
     />
     <title>ログイン画面</title>
   </head>
-  <body class="haikei">
+  <body>
     <div>
       <h3>ログイン画面</h3>
       {% if error != null %}
