--- a/templates/admin_update.html
+++ b/templates/admin_update.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{url_for('static', filename='/css/register.css')}}">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="{{url_for('static', filename='/css/register.css')}}"
+    />
     <title>パスワード変更画面</title>
-</head>
-<body>
+  </head>
+  <body>
     <h3 class="register">パスワード変更画面</h3>
-    
-<div class="regi">
-    {% if error != null %}
+
+    <div class="regi">
+      {% if error != null %}
       <p style="color: red">{{error}}</p>
       {% endif %} {% if msg != null %}
       <p style="color: blue">{{msg}}</p>
       {% endif %}
-    <form action= "{{url_for('admin_update_exe')}}" method="post">
+      <form action="{{url_for('admin_update_exe')}}" method="post">
         新規パスワード：
-       <input type="password" name="password"><br>
+        <input type="password" name="password" /><br />
         確認パスワード：
-        <input type="password" name="confirm_password"><br>
+        <input type="password" name="confirm_password" /><br />
         <button type="submit">変更</button>
-    </form>
-    
-</div>
-</body>
+      </form>
+    </div>
+  </body>
 </html>
