--- a/templates/music_register.html
+++ b/templates/music_register.html
@@ -5,64 +5,215 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <link
       rel="stylesheet"
       href="{{url_for('static', filename='/css/register.css')}}"
     />
     <title>音源登録画面</title>
+    <style>
+      ul.topnav {
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+        background-color: #044f88;
+      }
+      ul.topnav li {
+        float: left;
+      }
+      ul.topnav li a {
+        display: block;
+        text-align: center;
+        text-decoration: none;
+        color: white;
+      }
+      ul.topnav li a.left {
+        background-color: #044f88;
+      }
+      ul.topnav li.right {
+        float: right;
+      }
+      .contaner {
+        display: flex;
+        width: 100%;
+      }
+      span {
+        display: block;
+      }
+      .blockitem {
+        flex: 1;
+        font-size: 28px;
+        text-align: center;
+        padding-top: 10px;
+        height: 60px;
+        position: relative;
+      }
+      .body {
+        flex: 4;
+        height: 500px;
+        border-left: 1px solid #747474;
+      }
+      .blockitem a {
+        vertical-align: 10px;
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
-    <h3 class="register">音源の登録</h3>
-
-    <div class="regi">
-      <form action="{{url_for('music_regi_exe')}}" method="post">
-        名前<input type="text" name="name" /><br />
-        ジャンル
-        <select name="genre">
-          <option value="1">指定しない</option>
-          <option value="2">ポップ</option>
-          <option value="3">EDM</option>
-          <option value="4">ロック</option>
-          <option value="5">クラシック</option>
-          <option value="6">和風</option>
-          <option value="7">ピアノ</option>
-          <option value="8">アンビエント</option>
-          <option value="9">エレクトロ</option>
-          <option value="10">アコースティック</option>
-          <option value="11">Chill Hop</option></select
-        ><br />
-        詳細<textarea name="detail" rows="4" cols="60">
-音楽に関する説明</textarea
-        ><br />
-        長さ<input type="text" name="length" pattern="\d{1,2}:\d{2}" /><br />
-        作曲者<input type="text" name="composer" /><br />
-        参照元
-        <select name="source">
-          <option value="1">A</option>
-          <option value="2">B</option>
-          <option value="3">C</option>
-          <option value="4">D</option>
-          <option value="5">サイト名</option>
-          <br /></select
-        ><br />
-        URL<input type="text" name="url" /><br />
-        タグ
-        <b>雰囲気</b><br />
-        <input type="checkbox" name="tag_name" value="おだやか" />おだやか<br />
-        <b>感情</b><br />
-        <input type="checkbox" name="tag_name" value="かなしい" />かなしい<br />
-        <b>楽器</b><br />
-        <input type="checkbox" name="tag_name" value="ピアノ" />ピアノ<br />
-        <b>用途</b><br />
-        <input type="checkbox" name="tag_name" value="YouTube" />YouTube<br />
-        <button type="submit">登録</button>
-      </form>
-      <h4 style="margin-top: 25px"><a href="{{url_for('mypage')}}">戻る</a></h4>
+    <ul class="topnav">
+      <li>
+        <a class="left" href="#"><h2>　MUSIC REEF 管理者</h2></a>
+      </li>
+      <li class="right">
+        <a
+          href="#"
+          style="
+            border-left: 2px solid white; /*線の設定*/
+            padding: 2px 8px; /*余白の設定*/
+          "
+          ><h2>ログアウト</h2></a
+        >
+      </li>
+    </ul>
+    <div class="contaner">
+      <div>
+        <span style="background-color: #548eba; height: 45px" class="blockitem"
+          ><a style="color: white; font-size: 23px">音源の管理</a></span
+        >
+        <span class="blockitem" style="height: 45px"
+          ><a href="#" style="color: rgb(60, 60, 60); font-size: 23px"
+            >音源検索</a
+          ></span
+        >
+        <span class="blockitem" style="height: 45px"
+          ><a href="#" style="color: rgb(60, 60, 60); font-size: 23px"
+            >音源登録</a
+          ></span
+        >
+        <span style="background-color: #548eba; height: 45px" class="blockitem"
+          ><a style="color: white; font-size: 23px">口コミ管理</a></span
+        >
+        <span class="blockitem" style="height: 45px"
+          ><a href="#" style="color: rgb(60, 60, 60); font-size: 23px"
+            >口コミ削除</a
+          ></span
+        >
+        <span style="background-color: #548eba; height: 45px" class="blockitem"
+          ><a style="color: white; font-size: 23px">アカウント管理</a></span
+        >
+        <span class="blockitem" style="height: 45px"
+          ><a href="#" style="color: rgb(60, 60, 60); font-size: 23px"
+            >管理者一覧</a
+          ></span
+        >
+        <span class="blockitem" style="height: 45px"
+          ><a href="#" style="color: rgb(60, 60, 60); font-size: 23px"
+            >アカウント編集</a
+          ></span
+        >
+      </div>
+      <div class="body">
+        <h2 style="margin-left: 50px">音源の登録</h2>
+        <div style="margin-left: 40px">
+          <form action="{{url_for('music_regi_exe')}}" method="post">
+            名前<input
+              type="text"
+              name="name"
+              style="
+                width: 300px;
+                height: 30px;
+                outline: none;
+                border: none;
+                border-bottom: 1px solid black;
+                margin-bottom: 10px;
+                margin-left: 57px;
+              "
+            /><br />
+            ジャンル
+            <select
+              name="genre"
+              style="margin-bottom: 10px; text-align: center; margin-left: 20px"
+            >
+              <option value="1">指定しない</option>
+              <option value="2">ポップ</option>
+              <option value="3">EDM</option>
+              <option value="4">ロック</option>
+              <option value="5">クラシック</option>
+              <option value="6">和風</option>
+              <option value="7">ピアノ</option>
+              <option value="8">アンビエント</option>
+              <option value="9">エレクトロ</option>
+              <option value="10">アコースティック</option>
+              <option value="11">Chill Hop</option></select
+            ><br />
+            <p>詳細</p>
+            <textarea
+              name="detail"
+              rows="5"
+              cols="60"
+              style="margin-bottom: 10px; margin-left: 88px"
+            ></textarea
+            ><br />
+            長さ<input
+              type="text"
+              name="length"
+              pattern="\d{1,2}:\d{2}"
+              style="margin-bottom: 10px; margin-left: 57px"
+            /><br />
+            作曲者<input
+              type="text"
+              name="composer"
+              style="margin-bottom: 10px; margin-left: 40px"
+            /><br />
+            参照元
+            <select
+              name="source"
+              style="margin-bottom: 10px; margin-left: 35px"
+            >
+              <option value="1">A</option>
+              <option value="2">B</option>
+              <option value="3">C</option>
+              <option value="4">D</option>
+              <option value="5">サイト名</option>
+              <br /></select
+            ><br />
+            URL<input
+              type="text"
+              name="url"
+              style="margin-bottom: 10px; margin-left: 57px; width: 600px"
+            /><br />
+            タグ<br />
+            <b>雰囲気</b><br />
+            <input
+              type="checkbox"
+              name="tag_name"
+              value="おだやか"
+              style="margin-bottom: 10px; margin-left: 80px"
+            />おだやか<br />
+            <b>感情</b><br />
+            <input
+              type="checkbox"
+              name="tag_name"
+              value="かなしい"
+              style="margin-bottom: 10px; margin-left: 80px"
+            />かなしい<br />
+            <b>楽器</b><br />
+            <input
+              type="checkbox"
+              name="tag_name"
+              value="ピアノ"
+              style="margin-bottom: 10px; margin-left: 80px"
+            />ピアノ<br />
+            <b>用途</b><br />
+            <input
+              type="checkbox"
+              name="tag_name"
+              value="YouTube"
+              style="margin-bottom: 10px; margin-left: 80px"
+            />YouTube<br />
+            <button type="submit">登録</button><br /><br /><br />
+          </form>
+        </div>
+      </div>
     </div>
   </body>
 </html>
