--- a/templates/index.html
+++ b/templates/index.html
@@ -182,12 +182,16 @@
     </div>
     <!--　モーダル表示　-->   
     <!--削除のモーダル-->
+    {% for sound in music %}
     <div class="layer delete-modal">
       <div class="modal-header">
         <button class="msg-box msg-position js-delete-close-button">×</button>
         <div class="modal-body">
           <p>この音源を削除しますか？</p>
-          <button>削除</button>
+          <form action="{{url_for('delete_exe',music_id=sound[0])}}" method="post">
+            
+          <button type="submit">削除</button>
+          </form>
         </div> 
       </div>
     </div>
@@ -200,6 +204,7 @@
         </div> 
       </div>
     </div>      
-  
+    <script type="text/javascript" src="{{ url_for('static', filename='/js/script.js') }}"></script>
+    {% endfor %}
   </body>
 </html>
