--- a/templates/admin_update.html
+++ b/templates/admin_update.html
@@ -5,18 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <link
       rel="stylesheet"
       href="{{url_for('static', filename='/css/register.css')}}"
     />
     <title>パスワード変更画面</title>
+    <style>
+      ul.topnav {
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+        background-color: #044f88;
+      }
+      ul.topnav li {
+        float: left;
+      }
+      ul.topnav li a {
+        display: block;
+        text-align: center;
+        text-decoration: none;
+        color: white;
+      }
+      ul.topnav li a.left {
+        background-color: #044f88;
+      }
+      ul.topnav li.right {
+        float: right;
+      }
+    </style>
   </head>
   <body>
+    <ul class="topnav">
+      <li>
+        <a class="left" href="#"><h2>　MUSIC REEF 管理者</h2></a>
+      </li>
+      <li class="right">
+        <a
+          href="#"
+          style="
+            border-left: 2px solid white; /*線の設定*/
+            padding: 2px 8px; /*余白の設定*/
+          "
+          ><h2>ログアウト</h2></a
+        >
+      </li>
+    </ul>
     <h3 class="register">パスワード変更画面</h3>
 
     <div class="regi">
@@ -26,9 +59,9 @@
       <p style="color: blue">{{msg}}</p>
       {% endif %}
       <form action="{{url_for('admin_update_exe')}}" method="post">
-        新規パスワード：
+        <p style="font-size: 10px">新しいパスワード</p>
         <input type="password" name="password" /><br />
-        確認パスワード：
+        <p style="font-size: 10px">新しいパスワード（確認）</p>
         <input type="password" name="confirm_password" /><br />
         <button type="submit">変更</button>
       </form>
