--- a/templates/index.html
+++ b/templates/index.html
@@ -182,16 +182,12 @@
     </div>
     <!--　モーダル表示　-->   
     <!--削除のモーダル-->
-    {% for sound in music %}
     <div class="layer delete-modal">
       <div class="modal-header">
         <button class="msg-box msg-position js-delete-close-button">×</button>
         <div class="modal-body">
           <p>この音源を削除しますか？</p>
-          <form action="{{url_for('delete_exe',music_id=sound[0])}}" method="post">
-            
-          <button type="submit">削除</button>
-          </form>
+          <button>削除</button>
         </div> 
       </div>
     </div>
@@ -204,7 +200,6 @@
         </div> 
       </div>
     </div>      
-    <script type="text/javascript" src="{{ url_for('static', filename='/js/script.js') }}"></script>
-    {% endfor %}
+  
   </body>
 </html>
