リンク追加

--- a/templates/terms_of_service.html
+++ b/templates/terms_of_service.html
@@ -108,7 +108,11 @@
       <h1>MUSIC REEF</h1>
       <ul class="menu">
         <li><a href="#">ホーム</a></li>
-        <li><a href="#">MUSIC REEF(ミュージックリーフ)について</a></li>
+        <li>
+          <a href="about_the_site.html"
+            >MUSIC REEF(ミュージックリーフ)について</a
+          >
+        </li>
       </ul>
     </div>
   </body>
