--- a/templates/user_top.html
+++ b/templates/user_top.html
@@ -124,7 +124,7 @@
       </li>
       <li class="right">
         <a
-          href="#"
+          href="terms_of_service.html"
           style="
             border-left: 2px solid white; /*線の設定*/
             padding: 2px 8px; /*余白の設定*/
