--- a/templates/music_register.html
+++ b/templates/music_register.html
@@ -80,7 +80,9 @@
           ><a style="color: white; font-size: 23px">音源の管理</a></span
         >
         <span class="blockitem" style="height: 45px"
-          ><a href="#" style="color: rgb(60, 60, 60); font-size: 23px"
+          ><a
+            href="{{url_for('mypage')}}"
+            style="color: rgb(60, 60, 60); font-size: 23px"
             >音源検索</a
           ></span
         >
